Fixed bug in calendar showing too much days

--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -220,3 +220,7 @@ td {
 .list-unstyled {
     color: #6c758d
 }
+
+.workout {
+    color: white;
+}
